package edu.uees.patrones.builder;

public enum EstadoReserva {
    PENDIENTE,
    CONFIRMADA,
    CANCELADA,
    REALIZADA
}