@startuml
title Builder - Sistema de Gestión de Tutorías

enum EstadoReserva {
    PENDIENTE
    CONFIRMADA
    CANCELADA
    REALIZADA
}

class Reserva {
    - estudiante : String
    - asignatura : String
    - fecha : String
    - hora : String
    - docente : String
    - modalidad : String
    - tema : String
    - observaciones : String
    - estado : EstadoReserva

    ~ Reserva(estudiante : String,
              asignatura : String,
              fecha : String,
              hora : String,
              docente : String,
              modalidad : String,
              tema : String,
              observaciones : String,
              estado : EstadoReserva)

    + getEstado() : EstadoReserva
    + getEstudiante() : String
    + getAsignatura() : String
    + getFecha() : String
    + getHora() : String
    + getDocente() : String
    + getModalidad() : String
    + getTema() : String
    + getObservaciones() : String
    + toString() : String
}

class ReservaBuilder {
    - estudiante : String
    - asignatura : String
    - fecha : String
    - hora : String
    - docente : String
    - modalidad : String
    - tema : String
    - observaciones : String
    - estado : EstadoReserva

    + conEstudiante(estudiante : String) : ReservaBuilder
    + conAsignatura(asignatura : String) : ReservaBuilder
    + conFecha(fecha : String) : ReservaBuilder
    + conHora(hora : String) : ReservaBuilder
    + conDocente(docente : String) : ReservaBuilder
    + conModalidad(modalidad : String) : ReservaBuilder
    + conTema(tema : String) : ReservaBuilder
    + conObservaciones(observaciones : String) : ReservaBuilder
    + conEstado(estado : EstadoReserva) : ReservaBuilder
    + build() : Reserva
    - validarObligatorios() : void
}

class DemoBuilder {
    + main(args : String[]) : void
}

Reserva --> EstadoReserva : tiene estado
ReservaBuilder --> EstadoReserva : configura
ReservaBuilder ..> Reserva : construye
DemoBuilder ..> ReservaBuilder : utiliza
DemoBuilder ..> Reserva : obtiene

note right of ReservaBuilder
Builder permite construir una Reserva
paso a paso, diferenciando campos
obligatorios y opcionales.

build() valida los datos obligatorios
antes de crear el objeto.
end note

@enduml